--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Yeseva+One&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
@@ -13,7 +17,7 @@ body{
     color:#950101;
 }
 
-.btn{
+.btn-contact{
     background-color: #D2524A
     ;
     color: #fff;
