--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,71 @@ body{
     background-color:#60C3D5;
 }
 
+.bg-darkblue{
+    background-color: #224E9C;
+}
+
 .redwine{
     color:#950101;
 }
 
 .btn-contact{
-    background-color: #D2524A
-    ;
-    color: #fff;
+    background-color: #D2524A;
 }
+/* .btn{
+    background-color: #D2524A;
+    color: #fff;
+} */
+
+.fill_button{
+    position:relative;
+    background-color: #D2524A;
+    border-radius: 8px;
+    transition: all 1s;
+    
+  }
+.fill_button span{
+    position:relative;
+    z-index: 2;
+    transition: color 1s;
+  }
+  
+.fill_button::after{
+    position:absolute;
+    content:"";
+    top:0;
+    left:0;
+    width: 0;
+    height:100%;
+    border-radius: 8px;
+    background-color: #950101;
+    transition: all 1s ease-in-out;
+  }
+  
+.fill_button:hover::after{
+    width: 100%;
+  }
+
+.fill_button:hover span{
+    color: white;
+    transition: color 1s;
+}
+
+.input-border-bottom{
+    border:none;
+    border-bottom: 2px solid #224E9C;
+    border-radius: 0;
+    background-color:#60C3D5;
+    color:#f5f5f5;
+  }
+  
+.input-border-bottom:focus{
+    border:none;
+    border-bottom: 2px solid #224E9C;
+    border-radius: 0;
+    background-color:#60C3D5;
+    color:#f5f5f5;
+  }
 
 ::selection{
     background-color: #224E9C;
