--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,18 @@ span.redbar{
     transition: all 0.8s;
 }
 
+.btn-darkblue{
+    background-color: #224f9c54;
+    color: rgba(255, 255, 255, 0.644);
+    transition: all 0.8s;
+}
+
+.btn-darkblue:hover{
+    background-color: #224E9C;
+    color: white;
+    transition: all 0.8s;
+}
+
 .fill_button{
     position:relative;
     background-color: #D2524A;
@@ -106,6 +118,18 @@ span.redbar{
 
 #desc{
     text-align: justify;
+}
+
+.swal-modal{
+    background-color: #224E9C;
+    border: 0;
+    font-size:30px;
+    color: white;
+}
+
+.swal-text{
+    font-size:22px;
+    color: white;
 }
 
 /*Scrollbar customization*/
