--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,27 @@
-#clearBtn {
+/*NAVBAR*/
+.principalNav {
+    background: linear-gradient(
+        60deg,
+        rgba(34, 78, 156, 100) 0%,
+        rgba(0, 172, 193, 1) 100%
+    );
+    color: white;
+}
+
+.funcNavBar {
+    background-color: #DADDFC;
+}
+
+.nav-tabs .nav-link.active {
+    color: #950101;
+}
+
+.nav-pills .nav-link.active {
+    background-color: #950101;
+}
+
+/*MENSAJERÍA*/
+.btn-clear {
     background-image: url("../img/button.png");
     height: 44px;
     width: 44px;
@@ -21,8 +44,19 @@
 }
 
 .numMesg {
-    background-color: aliceblue;
+    background-color: #D2524A;
+    border-radius: 5px;
+    color: white;
     text-align: center;
+}
+
+.nameTitle {
+    text-align: center;
+}
+
+.mesgCard {
+    background-color: #EDEDED;
+    border-color: 1px solid green;
 }
 
 @media (max-width: 991.98px) {
