--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,20 @@ html {
 
 body{
     font-family: 'Poppins', sans-serif;
-    overflow:scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+    text-align: center;
+    background: linear-gradient(
+      60deg,
+      rgba(34, 78, 156, 100) 0%,
+      rgba(0, 172, 193, 1) 100%
+    );
+    color: white;
+    width: 100%;
+    height: 100%;
 }
 .bg-white{
     background-color: white;
-}
-.bg-lightblue{
-    background-color:#60C3D5;
 }
 
 .bg-darkblue{
